change to work with json

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,6 @@
             <!-- artifactId>jersey-container-servlet</artifactId -->
         </dependency>
 
-
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-binding</artifactId>
@@ -86,6 +85,12 @@
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-client</artifactId>
             <version>1.19.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.0</version>
         </dependency>
 
     </dependencies>
